updated free text range

--- a/company.secrets.htm
+++ b/company.secrets.htm
@@ -4,15 +4,15 @@
 
 <h1> GIT BASH STEPS AND COMMANDS"!</h1>
 <P>1.git config --global user.name "Jimmy ssengendo"
-2.git config --global user.email jskabaka@gmail.com
+<p>2.git config --global user.email jskabaka@gmail.com
 set default branch name
-3.git config --global init.default branch main
+<p>3.git config --global init.default branch main
 if you need help
-4.git config -h
-5.git help config
-6.git clear.
+<p>4.git config -h
+<p>5.git help config
+<p>6.git clear.
 if you want to use git to track/ stage files use file path
-7.cd C:/Users/DavidNtegeCompany.com
+<p>7.cd C:/Users/DavidNtegeCompany.com
 <p> whenever you need to use git bash,you always have
 to begin with your name please and not email.com address
 we take this very seriously members.</p>
