updated email address

--- a/company.secrets.htm
+++ b/company.secrets.htm
@@ -4,7 +4,7 @@
 
 <h1> GIT BASH STEPS AND COMMANDS"!</h1>
 <P>1.git config --global user.name "Jimmy ssengendo"
-<p>2.git config --global user.email jskabaka@gmail.com
+<p>2.git config --global user.email ntegedavis10@gmail.com
 set default branch name
 <p>3.git config --global init.default branch main
 if you need help
