--- a/company.secrets.htm
+++ b/company.secrets.htm
@@ -16,7 +16,7 @@ if you want to use git to track/ stage files use file path
 <p> whenever you need to use git bash,you always have
 to begin with your name please and not email.com address
 <p>8.my phone no:0753207770.
-we take this very seriously members.</p>
+<p> we take this very seriously members.</p>
 
 </body>
 </html>
