Git title is updated

--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,12 @@
 <body>
 
 
-<h1> git config --global user.name "Jimmy ssengendo"!</h1>
+<h1> Git and Github!</h1>
 <p> whenever you need to use git bash,you always have
 to begin with your name please and not email.com address
-we take this very seriously members.</p>
+we take this very seriously members.
+</p> git bash is very much easier friends.
+
 
 </body>
 </html>
