updated index text

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <body>
 
 
-<h1> git config --global user.name "Jimmy ssengendo"!</h1>
+<h1> "Jimmy ssengendo"!</h1>
 <p> whenever you need to use git bash,you always have
 to begin with your name please and not email.com address
 we take this very seriously members.</p>
