--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,24 @@
 <html>
 <body>
 
-
-
 <h1> Git and Github!</h1>
-<p> whenever you need to use git bash,you always have
+Every time you begin  using  git bash,you always have
 to begin with your name please and not email.com address
-we take this very seriously members.
-</p> git bash is very much easier friends.
+kindly use the following git commands;
+<P>1.git config --global user.name "Jimmy ssengendo"
+<p>2. git config --global user.email ntegedavis10@gmail.com
+set default branch name
+<p>3.git config --global init.default branch main
+if you need help
+<p>4.git config -h
+<p>5.git help config
+<p>6.git clear.
+if you want to use git to track/ stage files use file path
+<p>7.cd C:/Users/DavidNtegeCompany.com
+</p> git if you want to turn this into git respository use
+8.git init
+</p>if you want to know the status of our respository use
+9.git status
 
 
 </body>
